@@ -5,6 +5,8 @@ CHANGES IN CUPS V1.3.10
 
 	- Documentation fixes (STR #2994, STR #2995, STR #3008, STR #3056,
 	  STR #3057)
+	- httpSeparateURI() did not error out on URIs with a missing port
+	  number after a colon.
 	- Fixed a Valgrind-detected initialization error when creating a
 	  missing directory on startup.
 	- The scheduler did not always read all of the HTTP headers from a
